--- a/svelte/src/app.html
+++ b/svelte/src/app.html
@@ -11,9 +11,8 @@
 		<title>json ➡ flowchart</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" style="min-height: 100vh;">
-		<div >%sveltekit.body%</div>
-
+	<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex;">
+		<div style="display: contents">%sveltekit.body%</div>
 		<!-- Bootstrap 5.2 Bundled JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 	</body>
