--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<title>json ➡ flowchart</title>
 		
 		<link href="./_app/immutable/assets/2.471bd4fa.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.864a7c6b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e253e3ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.353cb19c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7ca29dfc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.96bf62fe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.65bc80e7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c4d90dd5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.45596283.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.d3a64ec5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.1b6006f0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.05e8345e.js">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_129nqxo = {
+					__sveltekit_ifk5zq = {
 						assets: "/json-flowchart",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.864a7c6b.js"),
-						import("./_app/immutable/entry/app.c4d90dd5.js")
+						import("./_app/immutable/entry/start.e253e3ad.js"),
+						import("./_app/immutable/entry/app.45596283.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
