--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<!-- Bootstrap 5.2.3 CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-		<!-- Bootstrap Icons -->
+		<!-- Bootstrap CSS (5.3.2) -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<!-- Bootstrap Icons (1.11.1) -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 		<title>json ➡ flowchart</title>
 		
-		<link href="./_app/immutable/assets/2.471bd4fa.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.b1a82995.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.353cb19c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.bbe42e35.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.65bc80e7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.519318c5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.d3a64ec5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.1b6006f0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.05e8345e.js">
+		<link href="./_app/immutable/assets/2.15054b7c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f8453844.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.a5ccb5c3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.67832240.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.132131ab.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.906b0481.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.8ed1558c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.54c80c1b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.8e90d84a.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex;">
-		<div style="display: contents">  <div class="container-fluid min-vh-100 bg-white"> <div class="row row-cols-1 row-cols-md-2 gy-2 align-items-center"><div class="col"><div class="display-4 py-3 text-center text-md-start text-dark">Json <i class="bi bi-arrow-right fs-1 text-primary"></i> Flowchart</div></div> <div class="col"><label for="input" class="form-label text-secondary" data-svelte-h="svelte-1pa4g5x">Upload a valid JSON to generate a flowchart</label> <input class="form-control border bg-white text-dark" type="file" id="input"></div></div>  <div class="row gx-4 mt-5 justify-content-center"><div class="col-4 text-center"><img src="/json-flowchart/_app/immutable/assets/blank.7b75c3d8.png" alt="" class="img-fluid w-50"> <p class="fs-5 text-secondary my-3" data-svelte-h="svelte-1szgwmn">Waiting for a file...</p> <div class="row row-cols-2 g-3"><div class="col"><button class="btn w-100 btn-outline-dark"> <span data-svelte-h="svelte-10cd3oy">example2</span></button></div> <div class="col"><button class="btn w-100 btn-outline-dark"><span data-svelte-h="svelte-1w0xwjy">example_empty</span></button></div></div></div></div></div> <div class="fixed-bottom bottom-0 start-0 p-2"><div class="dropdown" data-bs-theme="dark"><button class="btn dropdown-toggle border   btn-light" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false" title="Select a color mode"><i class="bi bi-brightness-high-fill me-2"></i></button> <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight"><li><button class="dropdown-item d-flex justify-content-between gap-3 active"><i class="bi bi-brightness-high-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-1lioits">Light</span> </button></li> <li><button class="dropdown-item d-flex justify-content-between gap-3"><i class="bi bi-moon-stars-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-yytuhw">Dark</span> </button></li></ul></div></div> 
+		<div style="display: contents">  <div class="container-fluid min-vh-100 pb-5 "> <div class="row row-cols-1 row-cols-md-2 gy-2 align-items-center"><div class="col" data-svelte-h="svelte-ag2qif"><div class="display-4 py-3 text-center text-md-start ">Json <i class="bi bi-arrow-right fs-1 text-primary"></i> Flowchart</div></div> <div class="col"><div class="input-group"><input class="form-control border bg-opacity-25" type="file" id="input"> </div></div></div>  <div class="row gx-4 mt-5 justify-content-center"><div class="col-12 col-md-5 d-flex flex-column align-items-stretch"><p class="display-5 text-secondary text-opacity-50 text-center py-5" data-svelte-h="svelte-1mi6o59">Waiting for a file...</p> <p class="text-start" data-svelte-h="svelte-gv8rzs">Use a preset file:</p> <button class="btn btn-outline-warning w-100 d-flex align-items-center justify-content-between text-dark" data-svelte-h="svelte-1dj3jp9"><span class="font-monospace fw-bold">pineapple</span> <span class="font-monospace fw-bold">🍍</span> </button></div></div></div> <div class="fixed-bottom bottom-0 start-0 p-2"><div class="dropdown" data-bs-theme="dark"><button class="btn btn-secondary dropdown-toggle border" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false" title="Select a color mode"><i class="bi bi-brightness-high-fill me-2"></i></button> <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight"><li><button class="dropdown-item d-flex justify-content-between gap-3 active"><i class="bi bi-brightness-high-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-1lioits">Light</span> <i class="bi bi-check"></i></button></li> <li><button class="dropdown-item d-flex justify-content-between gap-3"><i class="bi bi-moon-stars-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-yytuhw">Dark</span> </button></li></ul></div></div> 
 			
 			<script>
 				{
-					__sveltekit_uhax7f = {
+					__sveltekit_wwfkyc = {
 						assets: "/json-flowchart",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b1a82995.js"),
-						import("./_app/immutable/entry/app.519318c5.js")
+						import("./_app/immutable/entry/start.f8453844.js"),
+						import("./_app/immutable/entry/app.906b0481.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
@@ -49,7 +49,7 @@
 				}
 			</script>
 		</div>
-		<!-- Bootstrap 5.2 Bundled JS -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+		<!-- Bootstrap Bundled JS (5.3.2) -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
