--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
@@ -10,22 +10,22 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 		<title>json ➡ flowchart</title>
 		
-		<link href="./_app/immutable/assets/2.15054b7c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f8453844.js">
+		<link href="./_app/immutable/assets/2.a66f47c1.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f9355b54.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.a5ccb5c3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.67832240.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.db963d19.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.132131ab.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.906b0481.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.659aeccd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8ed1558c.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.54c80c1b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.8e90d84a.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.fc61f8fb.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="min-height: 100vh; display: flex;">
-		<div style="display: contents">  <div class="container-fluid min-vh-100 pb-5 "> <div class="row row-cols-1 row-cols-md-2 gy-2 align-items-center"><div class="col" data-svelte-h="svelte-ag2qif"><div class="display-4 py-3 text-center text-md-start ">Json <i class="bi bi-arrow-right fs-1 text-primary"></i> Flowchart</div></div> <div class="col"><div class="input-group"><input class="form-control border bg-opacity-25" type="file" id="input"> </div></div></div>  <div class="row gx-4 mt-5 justify-content-center"><div class="col-12 col-md-5 d-flex flex-column align-items-stretch"><p class="display-5 text-secondary text-opacity-50 text-center py-5" data-svelte-h="svelte-1mi6o59">Waiting for a file...</p> <p class="text-start" data-svelte-h="svelte-gv8rzs">Use a preset file:</p> <button class="btn btn-outline-warning w-100 d-flex align-items-center justify-content-between text-dark" data-svelte-h="svelte-1dj3jp9"><span class="font-monospace fw-bold">pineapple</span> <span class="font-monospace fw-bold">🍍</span> </button></div></div></div> <div class="fixed-bottom bottom-0 start-0 p-2"><div class="dropdown" data-bs-theme="dark"><button class="btn btn-secondary dropdown-toggle border" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false" title="Select a color mode"><i class="bi bi-brightness-high-fill me-2"></i></button> <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight"><li><button class="dropdown-item d-flex justify-content-between gap-3 active"><i class="bi bi-brightness-high-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-1lioits">Light</span> <i class="bi bi-check"></i></button></li> <li><button class="dropdown-item d-flex justify-content-between gap-3"><i class="bi bi-moon-stars-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-yytuhw">Dark</span> </button></li></ul></div></div> 
+		<div style="display: contents">  <div class="container-fluid min-vh-100 pb-5 "> <div class="row row-cols-1 row-cols-md-2 gy-2 align-items-center"><div class="col" data-svelte-h="svelte-ag2qif"><div class="display-4 py-3 text-center text-md-start ">Json <i class="bi bi-arrow-right fs-1 text-primary"></i> Flowchart</div></div> <div class="col"><div class="input-group"><input class="form-control border bg-opacity-25" type="file" id="input"> </div></div></div>  <div class="row gx-4 mt-5 justify-content-center"><div class="col-12 col-md-5 d-flex flex-column align-items-stretch"><p class="display-5 text-secondary text-opacity-50 text-center py-5" data-svelte-h="svelte-1mi6o59">Waiting for a file...</p> <p class="text-start" data-svelte-h="svelte-gv8rzs">Use a preset file:</p> <button class="btn btn-outline-warning w-100 d-flex align-items-center justify-content-between text-dark" data-svelte-h="svelte-1jgue00"><span class="font-monospace fw-bold">example_1</span></button></div></div></div> <div class="fixed-bottom bottom-0 start-0 p-2"><div class="dropdown" data-bs-theme="dark"><button class="btn btn-secondary dropdown-toggle border" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false" title="Select a color mode"><i class="bi bi-brightness-high-fill me-2"></i></button> <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight"><li><button class="dropdown-item d-flex justify-content-between gap-3 active"><i class="bi bi-brightness-high-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-1lioits">Light</span> <i class="bi bi-check"></i></button></li> <li><button class="dropdown-item d-flex justify-content-between gap-3"><i class="bi bi-moon-stars-fill"></i> <span class="flex-fill text-start" data-svelte-h="svelte-yytuhw">Dark</span> </button></li></ul></div></div> 
 			
 			<script>
 				{
-					__sveltekit_wwfkyc = {
+					__sveltekit_no05fh = {
 						assets: "/json-flowchart",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -36,8 +36,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f8453844.js"),
-						import("./_app/immutable/entry/app.906b0481.js")
+						import("./_app/immutable/entry/start.f9355b54.js"),
+						import("./_app/immutable/entry/app.659aeccd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
